   (Chris Male)

 * LUCENE-3765: Stopset ctors that previously took Set<?> or Map<?,String> now take
   CharArraySet and CharArrayMap respectively. Previously the behavior was confusing,
   and sometimes different depending on the type of set, and ultimately a CharArraySet
   or CharArrayMap was always used anyway.  (Robert Muir)

Bug fixes

 * LUCENE-3820: PatternReplaceCharFilter could return invalid token positions. 
   (Dawid Weiss)

 * LUCENE-3969: Throw IAE on bad arguments that could cause confusing errors in
   CompoundWordTokenFilterBase, PatternTokenizer, PositionFilter,
   SnowballFilter, PathHierarchyTokenizer, ReversePathHierarchyTokenizer, 
   WikipediaTokenizer, and KeywordTokenizer. ShingleFilter and 
   CommonGramsFilter now populate PositionLengthAttribute. Fixed
   PathHierarchyTokenizer to reset() all state. Protect against AIOOBE in
   ReversePathHierarchyTokenizer if skip is large. Fixed wrong final
   offset calculation in PathHierarchyTokenizer. 
   (Mike McCandless, Uwe Schindler, Robert Muir)

New Features

 * LUCENE-2341: A new analyzer/ filter: Morfologik - a dictionary-driven lemmatizer 
   (accurate stemmer) for Polish (includes morphosyntactic annotations).
   (Michał Dybizbański, Dawid Weiss)

 * LUCENE-2413: Consolidated Lucene/Solr analysis components into common. 
   New features from Solr now available to Lucene users include:
   - o.a.l.analysis.commongrams: Constructs n-grams for frequently occurring terms
     and phrases. 
   - o.a.l.analysis.charfilter.HTMLStripCharFilter: CharFilter that strips HTML 
     constructs.
   - o.a.l.analysis.miscellaneous.WordDelimiterFilter: TokenFilter that splits words 
     into subwords and performs optional transformations on subword groups.
   - o.a.l.analysis.miscellaneous.RemoveDuplicatesTokenFilter: TokenFilter which 
     filters out Tokens at the same position and Term text as the previous token.
   - o.a.l.analysis.miscellaneous.TrimFilter: Trims leading and trailing whitespace 