@@ -172,6 +172,26 @@ expr_stmt|;
 block|}
 annotation|@
 name|Override
+DECL|method|correct
+specifier|protected
+name|int
+name|correct
+parameter_list|(
+name|int
+name|currentOff
+parameter_list|)
+block|{
+return|return
+name|super
+operator|.
+name|correct
+argument_list|(
+name|currentOff
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
 DECL|method|read
 specifier|public
 name|int
@@ -378,9 +398,6 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|nextCharCounter
-operator|++
-expr_stmt|;
 if|if
 condition|(
 name|buffer
@@ -394,6 +411,9 @@ name|isEmpty
 argument_list|()
 condition|)
 block|{
+name|nextCharCounter
+operator|++
+expr_stmt|;
 return|return
 name|buffer
 operator|.
@@ -404,11 +424,28 @@ name|charValue
 argument_list|()
 return|;
 block|}
-return|return
+name|int
+name|nextChar
+init|=
 name|input
 operator|.
 name|read
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|nextChar
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|nextCharCounter
+operator|++
+expr_stmt|;
+block|}
+return|return
+name|nextChar
 return|;
 block|}
 DECL|method|pushChar
@@ -584,6 +621,8 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+else|else
+block|{                }
 block|}
 if|if
 condition|(
